--- a/settings_ui.glade
+++ b/settings_ui.glade
@@ -170,6 +170,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <signal name="clicked" handler="on_click_edit_button" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
