--- a/settings_ui.glade
+++ b/settings_ui.glade
@@ -9,14 +9,20 @@
     </columns>
   </object>
   <object class="GtkImage" id="error_tray_icon">
+    <property name="width_request">24</property>
+    <property name="height_request">24</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
   </object>
   <object class="GtkImage" id="new_tray_icon">
+    <property name="width_request">24</property>
+    <property name="height_request">24</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
   </object>
   <object class="GtkImage" id="normal_tray_icon">
+    <property name="width_request">24</property>
+    <property name="height_request">24</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
   </object>
@@ -339,9 +345,12 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
+                        <property name="hexpand">False</property>
+                        <property name="vexpand">False</property>
                         <property name="image">normal_tray_icon</property>
                         <property name="image_position">top</property>
                         <property name="always_show_image">True</property>
+                        <signal name="clicked" handler="on_normal_button_click" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -358,6 +367,7 @@
                         <property name="image">new_tray_icon</property>
                         <property name="image_position">top</property>
                         <property name="always_show_image">True</property>
+                        <signal name="clicked" handler="on_new_mail_button_click" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -374,6 +384,7 @@
                         <property name="image">error_tray_icon</property>
                         <property name="image_position">top</property>
                         <property name="always_show_image">True</property>
+                        <signal name="clicked" handler="on_error_button_click" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
