--- a/mail_settings_ui.glade
+++ b/mail_settings_ui.glade
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.20.0 -->
 <interface>
-  <requires lib="gtk+" version="3.10"/>
+  <requires lib="gtk+" version="3.16"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="upper">99</property>
     <property name="step_increment">1</property>
@@ -14,7 +14,7 @@
   </object>
   <object class="GtkDialog" id="dialog1">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Mail Settings</property>
+    <property name="border_width">7</property>
     <property name="resizable">False</property>
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
@@ -315,6 +315,7 @@ https://support.google.com/mail/answer/78754</property>
               <object class="GtkLabel" id="label1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_bottom">7</property>
                 <property name="label" translatable="yes">IMAP Server</property>
                 <attributes>
                   <attribute name="weight" value="bold"/>
@@ -328,6 +329,16 @@ https://support.google.com/mail/answer/78754</property>
             <property name="padding">5</property>
             <property name="position">2</property>
           </packing>
+        </child>
+      </object>
+    </child>
+    <child type="titlebar">
+      <object class="GtkHeaderBar">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="title">Mail Settings</property>
+        <child>
+          <placeholder/>
         </child>
       </object>
     </child>
